--- a/src/assets/styles/pages/_housing.scss
+++ b/src/assets/styles/pages/_housing.scss
@@ -364,7 +364,7 @@
 
                     @include mobile {
                         width: 100%;
-                        height: 30px;
+                        max-height: 30px;
                         padding: 0 2px 0 15px;
                         border-radius: 5px;
                     }
